C2LC-206: Merge develop-0.7 branch and fix some layout issues with the WorldSelector

--- a/src/App.scss
+++ b/src/App.scss
@@ -94,6 +94,7 @@ body {
     grid-row-end: 3;
     margin-right: 0.5rem;
     margin-top: 0.5rem;
+    margin-left: 1rem;
     width: 6rem;
 }
 
