--- a/src/WorldSelector.scss
+++ b/src/WorldSelector.scss
@@ -1,6 +1,8 @@
 @import 'variables';
 
 .WorldSelector {
+    position: relative;
+    top: 0.8rem;
     background-color: #CCE6E2;
     padding: 1rem;
     border: 1px solid grey;
